using the native camera plugin

--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -62,7 +62,8 @@
         <ion-textarea placeholder= "Enter your bio here" [(ngModel)]="textL"></ion-textarea>
       </ion-item>
       Hi, {{usernameL}}
-      <button ion-button color="danger" round (click)="usernameButton()">Show Bio</button> 
+      <button ion-button color="danger" round (click)="usernameButton()">Show Bio</button>
+      <button ion-button color="danger" round (click)="useCamera()">Use Camera</button> 
       <button ion-button color="secondary" full (click)="loginMe()">LogIn</button> 
       <button ion-button color="light" full (click)="registerMe()">Register</button>
     </ion-list>
